--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,4 +8,5 @@
 
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    <script type="text/javascript" src="{{ "/js/jquery-1.11.2.js" | prepend: site.baseurl }}"></script>
 </head>
