lfh menu development
added overflowing menu div, looking at translate animation but still dev

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -244,6 +244,11 @@
  * SLIDING MENU
  */
 
+.menu-icon-container {
+    width: 33px;
+    height: 32px;
+    margin-bottom: 1%;
+}
 
 /**
  * BACKGROUND
