--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,8 +5,25 @@
 
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{{ site.description }}">
-
+    <!-- CSS -->
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/menu.css" | prepend: site.baseurl }}">
+    
+    <!--
+    <link rel="stylesheet" href="{{ "/css/custom.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/jquery.jscrollpane.custom.css" | prepend: site.baseurl }}">
+
+	-->
+
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    <!-- JS VENDOR-->
     <script type="text/javascript" src="{{ "/js/jquery-1.11.2.js" | prepend: site.baseurl }}"></script>
+    <script type="text/javascript" src="{{ "/js/modernizr-latest.js" | prepend: site.baseurl }}"></script>
+
+    <!-- JS -->
+    <script type="text/javascript" src="{{ "/js/menu.js" | prepend: site.baseurl }}"></script>
+
+    <!-- 
+    <script type="text/javascript" src="{{ "/js/page.js" | prepend: site.baseurl }}"></script> 
+    -->
 </head>
