--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "/css/menu.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/style.css" | prepend: site.baseurl }}">
     
     <!--
     <link rel="stylesheet" href="{{ "/css/custom.css" | prepend: site.baseurl }}">
@@ -21,9 +22,11 @@
     <script type="text/javascript" src="{{ "/js/modernizr-latest.js" | prepend: site.baseurl }}"></script>
 
     <!-- JS -->
-    <script type="text/javascript" src="{{ "/js/menu.js" | prepend: site.baseurl }}"></script>
 
     <!-- 
+    <script type="text/javascript" src="{{ "/js/menu.js" | prepend: site.baseurl }}"></script>
+
+    
     <script type="text/javascript" src="{{ "/js/page.js" | prepend: site.baseurl }}"></script> 
     -->
 </head>
