--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,36 @@
 <header class="site-header">
 
-  <div class="wrapper">
 
-    <!-- NEW SLIDE LEFT NAV --> 
+<nav class="menu slide-menu-left">
+    <ul>
+        <li><button class="close-menu">&larr; Close</button></li>
+        <li><a href="#">Broccoli</a></li>
+        <li><a href="#">Tomato</a></li>
+        <li><a href="#">Cucumber</a></li>
+        <li><a href="#">Kale</a></li>
+        <li><a href="#">Celery</a></li>
+    </ul>
+</nav><!-- /slide menu left -->
+
+  <div  id="wrapper" class="wrapper">
+
+<div id="main">
+    <div class="container">
+        
+        <div class="buttons">
+            <button class="nav-toggler toggle-slide-left">Slide Menu Left</button>
+        </div>
+    </div>
+</div>  
+
+
+
+
+
+
+
+<!-- 
+     NEW SLIDE LEFT NAV 
     <div id="container" class="menu">   
       <ul id="menu-toc">
         <li><a href="#">menu link</a></li>
@@ -16,7 +44,7 @@
             <path fill="#424242" d="M18,13.516C18,14.335,17.335,15,16.516,15H1.484C0.665,15,0,14.335,0,13.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.031C17.335,12.031,18,12.696,18,13.516L18,13.516z"/>
           </svg>
         </a>
-    </div>
+    </div> -->
       
       <!-- END NEW SLIDE LEFT NAV --> 
 
