--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,4 +17,8 @@
  
   </body>
 
+  <!-- js -->
+ <script type="text/javascript" src="{{ "/js/classie.js" | prepend: site.baseurl }}"></script>
+ <script type="text/javascript" src="{{ "/js/menu.js" | prepend: site.baseurl }}"></script> 
+
 </html>
