--- a/css/menu.css
+++ b/css/menu.css
@@ -46,6 +46,20 @@ section.toggle {
     background: rgba(0, 0, 0, 0.8);
 }
 
+.menu-button {
+    width: 5%;
+    margin-top: 1%;
+    /*float: left;*/
+}
+
+.menu-button-open {
+    width: 5%;
+    margin-top: 1%;
+    position: absolute;
+    left: 300px;
+}
+
+
 /* ------------------------------------------------------------ *\
 |* ------------------------------------------------------------ *|
 |* Menus
