--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,8 @@ section.toggle {
 /* general style for all menus */
 nav.menu {
     position: fixed;
-    z-index: 20;
+    /*z-index: 20;*/
+    z-index: 10;
     background-color: #67b5d1;
     overflow: hidden;
     -webkit-transition: all 0.3s;
@@ -127,7 +128,8 @@ nav.slide-menu-right,
 nav.push-menu-left,
 nav.push-menu-right {
     top: 0;
-    width: 300px;
+    /*width: 300px;*/
+    width: 30%;
     height: 100%;
 }
 nav.slide-menu-left li,
