added svg to main page to start dev
added neon sass file to main to suss
added neon js

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,172 @@
 <header class="site-header">
+
+<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+   viewBox="0 0 960 560" enable-background="new 0 0 960 560" xml:space="preserve">
+<g id="N2">
+  <path id="end_14_" fill="#FF173D" d="M672.6,224.8l8.9-6.4l5,6.9c1.4,2,1,4.8-1,6.2l-1.8,1.3c-1.9,1.4-4.7,1-6.1-1L672.6,224.8z"/>
+  <path id="end_13_" fill="#FF173D" d="M541.5,217.2h10.9v8.5c0,2.4-2,4.4-4.4,4.4h-2.2c-2.4,0-4.3-1.9-4.3-4.3V217.2z"/>
+  <g id="tube_11_">
+    <path fill="#01B900" d="M687.1,228.8c0.3-1.2,0-2.5-0.7-3.5l-4-5.6c-0.1,0.6-0.3,1.2-0.5,1.8L687.1,228.8z"/>
+    <path fill="#01B900" d="M673.4,225.9l4.3,5.9c0.8,1,1.9,1.6,3.1,1.8l-5.4-7.5c-0.1,0-0.2,0-0.3,0
+      C674.4,226.1,673.9,226,673.4,225.9z"/>
+    <path fill="#01B900" d="M542.7,224.5v-7.3h-1.2v8.6c0,2.4,1.9,4.3,4.3,4.3h2.2c2,0,3.6-1.3,4.2-3.1c-0.1,0-0.2,0.1-0.2,0.1
+      C549.7,230.8,542.7,229.9,542.7,224.5z"/>
+    <path fill="#1EC11A" d="M681.9,221.5c0.2-0.6,0.4-1.2,0.5-1.8c0.3-1.8-0.1-3.6-1.1-5.2L574,50.2c-9.4-14.4-17.6-15.6-22.7-14.1
+      c-9.3,2.8-11.3,14.7-11.3,24.2v151.1c0,4.1,3.4,7.5,7.5,7.5s7.5-3.4,7.5-7.5V60.3c0-4.3,0.5-7.1,0.9-8.7c1.3,1.1,3.2,3.2,5.5,6.8
+      l107.3,164.3c1.1,1.7,2.8,2.8,4.7,3.2c0.5,0.1,1.1,0.2,1.6,0.2c0.1,0,0.2,0,0.3,0c1.3-0.1,2.6-0.4,3.8-1.2
+      C680.4,224,681.3,222.8,681.9,221.5z"/>
+  </g>
+  <path id="end_12_" fill="#FF173D" d="M686.4,37.2h-10.9v-8.5c0-2.4,2-4.4,4.4-4.4h2.2c2.4,0,4.3,1.9,4.3,4.3V37.2z"/>
+  <path id="end_11_" fill="#FF173D" d="M675.5,187.2h10.9v8.5c0,2.4-2,4.4-4.4,4.4h-2.2c-2.4,0-4.3-1.9-4.3-4.3V187.2z"/>
+  <path id="tube_10_" fill="#01B900" d="M686.4,36.2v-7.6c0-1.3-0.6-2.4-1.5-3.2v10.3c-0.5-0.1-1-0.2-1.5-0.2h-5
+    c-0.5,0-1,0.1-1.5,0.2V25.4c-0.9,0.8-1.5,2-1.5,3.3v7.5c-1.8,1-3,3-3,5.2v141c0,2.2,1.2,4.2,3,5.2v8.2c0,2.4,1.9,4.3,4.3,4.3h2.2
+    c2,0,3.6-1.3,4.2-3.1c-0.1,0-0.2,0.1-0.2,0.1c-2.3,3.6-9.3,2.7-9.3-2.7v-6.4c0.6,0.2,1.1,0.3,1.8,0.3h5c3.3,0,6-2.7,6-6v-141
+    C689.5,39.2,688.2,37.2,686.4,36.2z"/>
+</g>
+<g id="O">
+  <g id="tube_8_">
+    <path id="tube_9_" fill="#01B900" d="M423,31c-55.7,0-101,45.3-101,101s45.3,101,101,101s101-45.3,101-101S478.7,31,423,31z
+       M423,221c-4.2,0-8.2-0.3-12.3-0.8c0.5,1.2-0.1,2.8-1.7,2.6c-5.3-0.7-10.2-1.1-15-3.5c-2.3-1.2-4.6-3.2-7.2-3.8
+      c-2.2-0.5-4.1-0.9-6.1-2c-1.4-0.8-1.1-2.5-0.2-3.3C352.8,195.1,334,165.7,334,132c0-49.1,39.9-89,89-89c7.4,0,14.6,0.9,21.4,2.6
+      c-0.3-1.2,0.3-2.5,1.8-2.4c6.3,0.7,11.6,3.8,17.3,6.5c1.4,0.7,1.2,2.3,0.3,3.1C492.4,67.7,512,97.6,512,132
+      C512,181.1,472.1,221,423,221z"/>
+  </g>
+  <circle id="end_10_" fill="none" stroke="#B70030" stroke-width="8" stroke-miterlimit="10" cx="423" cy="132" r="95"/>
+  <g id="tube_5_">
+    <path id="tube_7_" fill="#01B900" d="M381.8,209.2c-27.5-14.8-46.3-43.8-46.3-77.2c0-48.2,39.3-87.5,87.5-87.5c7.6,0,15,1,22,2.8
+      l6-13.9c-8.9-2.5-18.3-3.9-28-3.9c-56.5,0-102.5,46-102.5,102.5c0,39.7,22.7,74.2,55.8,91.2L381.8,209.2z"/>
+    <path id="tube_6_" fill="#01B900" d="M467,39.4l-6,13.8c29.3,14.2,49.5,44.2,49.5,78.8c0,48.2-39.3,87.5-87.5,87.5
+      c-4.7,0-9.3-0.4-13.8-1.1l-5.6,14.2c6.3,1.2,12.7,1.8,19.3,1.8c56.5,0,102.5-46,102.5-102.5C525.5,91.2,501.5,55.9,467,39.4z"/>
+  </g>
+</g>
+<g id="G">
+  <g id="tube_21_">
+    <path fill="#01B900" d="M340,453c-4.2,0-8.2-0.3-12.3-0.8c0.5,1.2-0.1,2.8-1.7,2.6c-5.3-0.7-10.2-1.1-15-3.5
+      c-2.3-1.2-4.6-3.2-7.2-3.8c-2.2-0.5-4.1-0.9-6.1-2c-1.4-0.8-1.1-2.5-0.2-3.3C269.8,427.1,251,397.7,251,364c0-49.1,39.9-89,89-89
+      c7.4,0,14.6,0.9,21.4,2.6c-0.3-1.2,0.3-2.5,1.8-2.4c6.3,0.7,11.6,3.8,17.3,6.5c1.4,0.7,1.2,2.3,0.3,3.1
+      c14.8,7.7,27.3,19.4,35.8,33.8c3.6-1.8,7.2-3.5,10.7-5.5c-17.5-30-50.1-50.2-87.2-50.2c-55.7,0-101,45.3-101,101s45.3,101,101,101
+      c47.7,0,87.7-33.2,98.3-77.7h-12.4C415.6,425.1,381,453,340,453z"/>
+  </g>
+  <g id="end_31_">
+    <g>
+      <path fill="#B70030" d="M429.2,382.3C420.5,424.4,383,455,340,455c-50.2,0-91-40.8-91-91s40.8-91,91-91
+        c32.4,0,62.6,17.4,78.8,45.5c1.4,2.5,2.6,4.9,2.6,4.9c0.7,1.5,2.7,2.7,4.3,2.8c0,0,1.2-0.4,2.2-1.7c1-1.3,1.2-3.5,0.5-5
+        c0,0-1.2-2.5-2.7-5C408.1,284,375.2,265,340,265c-54.6,0-99,44.4-99,99s44.4,99,99,99c46.8,0,87.6-33.2,97-79.1
+        c0.8-3.8,1.3-7.5,1.3-7.5c0.2-1.6-1-3-2.6-3h-2c-1.6,0-3.2,1.3-3.4,3C430.2,376.5,429.8,379.1,429.2,382.3z"/>
+    </g>
+  </g>
+  <g id="tube_20_">
+    <g>
+      <path fill="#01B900" d="M340,261.5c-56.5,0-102.5,46-102.5,102.5c0,39.7,22.7,74.2,55.8,91.2l5.5-14.1
+        c-27.5-14.8-46.3-43.8-46.3-77.2c0-48.2,39.3-87.5,87.5-87.5c7.6,0,15,1,22,2.8l6-13.9C359.1,262.9,349.7,261.5,340,261.5z"/>
+    </g>
+    <path fill="#01B900" d="M424.8,385.5c-9.6,37.9-44,66-84.8,66c-4.7,0-9.3-0.4-13.8-1.1l-5.6,14.2c6.3,1.2,12.7,1.8,19.3,1.8
+      c49.1,0,90.3-34.8,100.2-81H424.8z"/>
+    <path fill="#01B900" d="M428.3,312c-11.8-20.5-23.3-30.6-44.3-40.6l-6,13.8c15.6,7.5,28.6,19.5,37.3,34.3L428.3,312z"/>
+  </g>
+  <path id="end_30_" fill="#FF173D" d="M429,370V359h8.5c2.4,0,4.4,2,4.4,4.4v2.2c0,2.4-1.9,4.3-4.3,4.3H429z"/>
+  <path id="end_29_" fill="#FF173D" d="M356,359V370h-8.5c-2.4,0-4.4-2-4.4-4.4v-2.2c0-2.4,1.9-4.3,4.3-4.3H356z"/>
+  <path id="tube_19_" fill="#01B900" d="M440.9,368.5h-10.6c0.1-0.5,0.2-1,0.2-1.5v-5c0-0.5-0.1-1-0.2-1.5h10.5
+    c-0.8-0.9-2-1.5-3.3-1.5h-7.8c-1-1.8-3-3-5.2-3h-65c-2.2,0-4.2,1.2-5.2,3h-6.9c-2.4,0-4.3,1.9-4.3,4.3v2.2c0,2,1.3,3.6,3.1,4.2
+    c0-0.1-0.1-0.2-0.1-0.2c-3.6-2.3-2.7-9.3,2.7-9.3h5.1c-0.2,0.6-0.3,1.1-0.3,1.8v5c0,3.3,2.7,6,6,6h65c2.2,0,4.2-1.2,5.2-3h7.9
+    C438.9,370,440.1,369.4,440.9,368.5z"/>
+</g>
+<g id="U">
+  <path id="end_28_" fill="#FF173D" d="M553.5,278.7h-10.9v-8.5c0-2.4,2-4.4,4.4-4.4h2.2c2.4,0,4.3,1.9,4.3,4.3V278.7z"/>
+  <path id="end_27_" fill="#FF173D" d="M689.5,278.7h-10.9v-8.5c0-2.4,2-4.4,4.4-4.4h2.2c2.4,0,4.3,1.9,4.3,4.3V278.7z"/>
+  <path id="tube_18_" fill="#01B900" d="M689.5,276.5v-6.5c0-2.4-1.9-4.3-4.3-4.3H683c-2,0-3.6,1.3-4.2,3.1c0.1,0,0.2-0.1,0.2-0.1
+    c2.3-3.6,9.3-2.7,9.3,2.7v4.3c-1.3-0.7-2.7-1.2-4.2-1.2c-4.7,0-8.5,3.9-8.5,8.6v144.7c0,12.5-7.5,23-16.3,23h-86.4
+    c-8.8,0-16.3-10.5-16.3-23V283.1c0-2.6-1.2-5-3-6.6v-6.5c0-2.4-1.9-4.3-4.3-4.3H547c-2,0-3.6,1.3-4.2,3.1c0.1,0,0.2-0.1,0.2-0.1
+    c2.3-3.6,9.3-2.7,9.3,2.7v4.3c-1.3-0.7-2.7-1.2-4.2-1.2c-4.7,0-8.5,3.9-8.5,8.6v144.7c0,22.2,14.9,40.2,33.3,40.2h86.4
+    c18.4,0,33.3-18,33.3-40.2V283.1C692.5,280.5,691.3,278.1,689.5,276.5z"/>
+</g>
+<g id="L">
+  <path id="end_26_" fill="#FF173D" d="M67.5,453.7h10.9v8.5c0,2.4-2,4.4-4.4,4.4h-2.2c-2.4,0-4.3-1.9-4.3-4.3V453.7z"/>
+  <path id="end_25_" fill="#FF173D" d="M78.5,273.7H67.5v-8.5c0-2.4,2-4.4,4.4-4.4h2.2c2.4,0,4.3,1.9,4.3,4.3V273.7z"/>
+  <path id="tube_17_" fill="#01B900" d="M78.5,273.3v-8.2c0-2.4-1.9-4.3-4.3-4.3H72c-2,0-3.6,1.3-4.2,3.1c0.1,0,0.2-0.1,0.2-0.1
+    c2.3-3.6,9.3-2.7,9.3,2.7v6.4c-0.6-0.2-1.1-0.3-1.8-0.3h-5c-3.3,0-6,2.7-6,6v171c0,2.2,1.2,4.2,3,5.2v7.6c0,1.3,0.6,2.4,1.5,3.2
+    v-10.3c0.5,0.1,1,0.2,1.5,0.2h5c0.5,0,1-0.1,1.5-0.2v10.2c0.9-0.8,1.5-2,1.5-3.3v-7.5c1.8-1,3-3,3-5.2v-171
+    C81.5,276.3,80.3,274.3,78.5,273.3z"/>
+  <path id="end_24_" fill="#FF173D" d="M175,463V452h8.5c2.4,0,4.4,2,4.4,4.4v2.2c0,2.4-1.9,4.3-4.3,4.3H175z"/>
+  <path id="end_23_" fill="#FF173D" d="M101,452V463h-8.5c-2.4,0-4.4-2-4.4-4.4v-2.2c0-2.4,1.9-4.3,4.3-4.3H101z"/>
+  <path id="tube_16_" fill="#01B900" d="M186.9,461.5h-11.1c0.1-0.5,0.2-1,0.2-1.5v-5c0-0.5-0.1-1-0.2-1.5h11c-0.8-0.9-2-1.5-3.3-1.5
+    h-8.3c-1-1.8-3-3-5.2-3h-64c-2.2,0-4.2,1.2-5.2,3h-8.4c-2.4,0-4.3,1.9-4.3,4.3v2.2c0,2,1.3,3.6,3.1,4.2c0-0.1-0.1-0.2-0.1-0.2
+    c-3.6-2.3-2.7-9.3,2.7-9.3h6.6c-0.2,0.6-0.3,1.1-0.3,1.8v5c0,3.3,2.7,6,6,6h64c2.2,0,4.2-1.2,5.2-3h8.4
+    C184.9,463,186.1,462.4,186.9,461.5z"/>
+</g>
+<g id="E2">
+  <path id="end_22_" fill="#FF173D" d="M768.5,456.7h10.9v8.5c0,2.4-2,4.4-4.4,4.4h-2.2c-2.4,0-4.3-1.9-4.3-4.3V456.7z"/>
+  <path id="end_21_" fill="#FF173D" d="M779.5,276.7h-10.9v-8.5c0-2.4,2-4.4,4.4-4.4h2.2c2.4,0,4.3,1.9,4.3,4.3V276.7z"/>
+  <path id="tube_15_" fill="#01B900" d="M779.5,276.3v-8.2c0-2.4-1.9-4.3-4.3-4.3H773c-2,0-3.6,1.3-4.2,3.1c0.1,0,0.2-0.1,0.2-0.1
+    c2.3-3.6,9.3-2.7,9.3,2.7v6.4c-0.6-0.2-1.1-0.3-1.8-0.3h-5c-3.3,0-6,2.7-6,6v171c0,2.2,1.2,4.2,3,5.2v7.6c0,1.3,0.6,2.4,1.5,3.2
+    v-10.3c0.5,0.1,1,0.2,1.5,0.2h5c0.5,0,1-0.1,1.5-0.2v10.2c0.9-0.8,1.5-2,1.5-3.3v-7.5c1.8-1,3-3,3-5.2v-171
+    C782.5,279.3,781.3,277.3,779.5,276.3z"/>
+  <path id="end_20_" fill="#FF173D" d="M876,466V455h8.5c2.4,0,4.4,2,4.4,4.4v2.2c0,2.4-1.9,4.3-4.3,4.3H876z"/>
+  <path id="end_19_" fill="#FF173D" d="M803,455V466h-8.5c-2.4,0-4.4-2-4.4-4.4v-2.2c0-2.4,1.9-4.3,4.3-4.3H803z"/>
+  <path id="tube_14_" fill="#01B900" d="M887.9,464.5h-11.1c0.1-0.5,0.2-1,0.2-1.5v-5c0-0.5-0.1-1-0.2-1.5h11c-0.8-0.9-2-1.5-3.3-1.5
+    h-8.3c-1-1.8-3-3-5.2-3h-64c-2.2,0-4.2,1.2-5.2,3h-7.4c-2.4,0-4.3,1.9-4.3,4.3v2.2c0,2,1.3,3.6,3.1,4.2c0-0.1-0.1-0.2-0.1-0.2
+    c-3.6-2.3-2.7-9.3,2.7-9.3h5.6c-0.2,0.6-0.3,1.1-0.3,1.8v5c0,3.3,2.7,6,6,6h64c2.2,0,4.2-1.2,5.2-3h8.4
+    C885.9,466,887.1,465.4,887.9,464.5z"/>
+  <path id="end_18_" fill="#FF173D" d="M864,368V357h8.5c2.4,0,4.4,2,4.4,4.4v2.2c0,2.4-1.9,4.3-4.3,4.3H864z"/>
+  <path id="end_17_" fill="#FF173D" d="M801,357V368h-8.5c-2.4,0-4.4-2-4.4-4.4v-2.2c0-2.4,1.9-4.3,4.3-4.3H801z"/>
+  <path id="tube_13_" fill="#01B900" d="M875.9,366.5h-9.8c0.1-0.5,0.2-1,0.2-1.5v-5c0-0.5-0.1-1-0.2-1.5h9.7c-0.8-0.9-2-1.5-3.3-1.5
+    h-7c-1-1.8-3-3-5.2-3h-54c-2.3,0-4.3,1.3-5.3,3.3V357h-8.6c-2.4,0-4.3,1.9-4.3,4.3v2.2c0,2,1.3,3.6,3.1,4.2c0-0.1-0.1-0.2-0.1-0.2
+    c-3.6-2.3-2.7-9.3,2.7-9.3h6.9c-0.2,0.6-0.3,1.1-0.3,1.8v5c0,3.3,2.7,6,6,6h54c2.2,0,4.2-1.2,5.2-3h7.1
+    C873.9,368,875.1,367.4,875.9,366.5z"/>
+  <path id="end_16_" fill="#FF173D" d="M874,275V264h8.5c2.4,0,4.4,2,4.4,4.4v2.2c0,2.4-1.9,4.3-4.3,4.3H874z"/>
+  <path id="end_15_" fill="#FF173D" d="M801,264V275h-8.5c-2.4,0-4.4-2-4.4-4.4v-2.2c0-2.4,1.9-4.3,4.3-4.3H801z"/>
+  <path id="tube_12_" fill="#01B900" d="M885.9,273.5h-11.1c0.1-0.5,0.2-1,0.2-1.5v-5c0-0.5-0.1-1-0.2-1.5h11c-0.8-0.9-2-1.5-3.3-1.5
+    h-8.3c-1-1.8-3-3-5.2-3h-64c-2.2,0-4.2,1.2-5.2,3h-8.4c-2.4,0-4.3,1.9-4.3,4.3v2.2c0,2,1.3,3.6,3.1,4.2c0-0.1-0.1-0.2-0.1-0.2
+    c-3.6-2.3-2.7-9.3,2.7-9.3h6.6c-0.2,0.6-0.3,1.1-0.3,1.8v5c0,3.3,2.7,6,6,6h64c2.2,0,4.2-1.2,5.2-3h8.4
+    C883.9,275,885.1,274.4,885.9,273.5z"/>
+</g>
+<g id="E">
+  <path id="end_9_" fill="#FF173D" d="M319,44V33h8.5c2.4,0,4.4,2,4.4,4.4v2.2c0,2.4-1.9,4.3-4.3,4.3H319z"/>
+  <path id="end_8_" fill="#FF173D" d="M234,33V44h-8.5c-2.4,0-4.4-2-4.4-4.4v-2.2c0-2.4,1.9-4.3,4.3-4.3H234z"/>
+  <path id="tube_4_" fill="#01B900" d="M319.6,42.5C319.6,42.5,319.6,42.5,319.6,42.5c0.1-0.5,0.2-1,0.2-1.5v-5c0-0.5-0.1-1-0.2-1.5
+    c0,0,0,0,0,0h11.2c-0.8-0.9-2-1.5-3.3-1.5H319v0c-1-1.8-3-3.1-5.2-3.1h-75c-2.2,0-4.2,1.2-5.2,3h-8.2c-2.4,0-4.3,1.9-4.3,4.3v2.2
+    c0,2,1.3,3.6,3.1,4.2c0-0.1-0.1-0.2-0.1-0.2c-3.6-2.3-2.7-9.3,2.7-9.3h6.4c-0.2,0.6-0.3,1.1-0.3,1.8v5c0,3.3,2.7,6,6,6h75
+    c2.2,0,4.2-1.2,5.2-3.1v0h8.6c1.3,0,2.4-0.6,3.2-1.5H319.6z"/>
+  <path id="end_7_" fill="#FF173D" d="M321,229V218h8.5c2.4,0,4.4,2,4.4,4.4v2.2c0,2.4-1.9,4.3-4.3,4.3H321z"/>
+  <path id="end_6_" fill="#FF173D" d="M236,218V229h-8.5c-2.4,0-4.4-2-4.4-4.4v-2.2c0-2.4,1.9-4.3,4.3-4.3H236z"/>
+  <path id="tube_3_" fill="#01B900" d="M321.6,227.5C321.6,227.5,321.6,227.5,321.6,227.5c0.1-0.5,0.2-1,0.2-1.5v-5
+    c0-0.5-0.1-1-0.2-1.5c0,0,0,0,0,0h11.2c-0.8-0.9-2-1.5-3.3-1.5H321v0c-1-1.8-3-3.1-5.2-3.1h-75c-2.2,0-4.2,1.2-5.2,3h-8.2
+    c-2.4,0-4.3,1.9-4.3,4.3v2.2c0,2,1.3,3.6,3.1,4.2c0-0.1-0.1-0.2-0.1-0.2c-3.6-2.3-2.7-9.3,2.7-9.3h6.4c-0.2,0.6-0.3,1.1-0.3,1.8v5
+    c0,3.3,2.7,6,6,6h75c2.2,0,4.2-1.2,5.2-3.1v0h8.6c1.3,0,2.4-0.6,3.2-1.5H321.6z"/>
+  <path id="end_5_" fill="#FF173D" d="M299,137V126h8.5c2.4,0,4.4,2,4.4,4.4v2.2c0,2.4-1.9,4.3-4.3,4.3H299z"/>
+  <path id="end_4_" fill="#FF173D" d="M235,126V137h-8.5c-2.4,0-4.4-2-4.4-4.4v-2.2c0-2.4,1.9-4.3,4.3-4.3H235z"/>
+  <path id="tube_2_" fill="#01B900" d="M300.1,135.5c0.1-0.5,0.2-1,0.2-1.5v-5c0-0.5-0.1-1-0.2-1.5h10.7c-0.8-0.9-2-1.5-3.3-1.5h-8
+    c-1-1.8-3-3-5.2-3h-54c-2.3,0-4.3,1.3-5.3,3.3V126h-8.6c-2.4,0-4.3,1.9-4.3,4.3v2.2c0,2,1.3,3.6,3.1,4.2c0-0.1-0.1-0.2-0.1-0.2
+    c-3.6-2.3-2.7-9.3,2.7-9.3h6.9c-0.2,0.6-0.3,1.1-0.3,1.8v5c0,3.3,2.7,6,6,6h54c2.2,0,4.2-1.2,5.2-3h8.1c1.3,0,2.4-0.6,3.2-1.5
+    H300.1z"/>
+</g>
+<g id="N">
+  <path id="end_3_" fill="#FF173D" d="M81.4,37.1l-8.9,6.4l-5-6.9c-1.4-2-1-4.8,1-6.2l1.8-1.3c1.9-1.4,4.7-1,6.1,1L81.4,37.1z"/>
+  <path id="end_2_" fill="#FF173D" d="M212.5,44.7h-10.9v-8.5c0-2.4,2-4.4,4.4-4.4h2.2c2.4,0,4.3,1.9,4.3,4.3V44.7z"/>
+  <g id="tube_1_">
+    <path fill="#01B900" d="M66.8,33.1c-0.3,1.2,0,2.5,0.7,3.5l4,5.6c0.1-0.6,0.3-1.2,0.5-1.8L66.8,33.1z"/>
+    <path fill="#01B900" d="M76.4,30.1c-0.8-1-1.9-1.6-3.1-1.8l5.4,7.5c0.7,0,1.3,0,1.9,0.2L76.4,30.1z"/>
+    <path fill="#01B900" d="M211.2,37.4v7.3h1.2v-8.6c0-2.4-1.9-4.3-4.3-4.3H206c-2,0-3.6,1.3-4.2,3.1c0.1,0,0.2-0.1,0.2-0.1
+      C204.3,31.1,211.2,32,211.2,37.4z"/>
+    <path fill="#1EC11A" d="M206.5,43c-4.1,0-7.5,3.4-7.5,7.5v151.1c0,4.3-0.5,7.1-0.9,8.7c-1.3-1.1-3.2-3.2-5.5-6.8L85.3,39.2
+      c-1.1-1.7-2.8-2.8-4.7-3.2c-0.6-0.1-1.3-0.2-1.9-0.2c-1.3,0.1-2.6,0.4-3.8,1.2c-1.3,0.8-2.2,2-2.8,3.3c-0.2,0.6-0.4,1.2-0.5,1.8
+      c-0.3,1.8,0.1,3.6,1.1,5.2L180,211.7c7.5,11.5,14.2,14.6,19.2,14.6c1.3,0,2.4-0.2,3.5-0.5c9.3-2.8,11.3-14.7,11.3-24.2V50.5
+      C214,46.4,210.6,43,206.5,43z"/>
+  </g>
+  <path id="end_1_" fill="#FF173D" d="M67.5,224.7h10.9v8.5c0,2.4-2,4.4-4.4,4.4h-2.2c-2.4,0-4.3-1.9-4.3-4.3V224.7z"/>
+  <path id="end" fill="#FF173D" d="M78.5,74.7H67.5v-8.5c0-2.4,2-4.4,4.4-4.4h2.2c2.4,0,4.3,1.9,4.3,4.3V74.7z"/>
+  <path id="tube" fill="#01B900" d="M78.5,74.3v-8.2c0-2.4-1.9-4.3-4.3-4.3H72c-2,0-3.6,1.3-4.2,3.1c0.1,0,0.2-0.1,0.2-0.1
+    c2.3-3.6,9.3-2.7,9.3,2.7v6.4c-0.6-0.2-1.1-0.3-1.8-0.3h-5c-3.3,0-6,2.7-6,6v141c0,2.2,1.2,4.2,3,5.2v7.6c0,1.3,0.6,2.4,1.5,3.2
+    v-10.3c0.5,0.1,1,0.2,1.5,0.2h5c0.5,0,1-0.1,1.5-0.2v10.2c0.9-0.8,1.5-2,1.5-3.3v-7.5c1.8-1,3-3,3-5.2v-141
+    C81.5,77.3,80.3,75.3,78.5,74.3z"/>
+</g>
+</svg>
+
+
+
+
+
+
   <!-- Navigation -->
   <nav class="menu slide-menu-left">
       <ul>
