--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,5 +19,6 @@
 
   <!-- JS -->
  <script type="text/javascript" src="{{ "/js/menu.js" | prepend: site.baseurl }}"></script> 
+ <script type="text/javascript" src="{{ "/js/neon.js" | prepend: site.baseurl }}"></script> 
 
 </html>
