--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,23 +1,26 @@
 <header class="site-header">
-<p>new2</p>
+<p>new1</p>
 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
    viewBox="0 0 960 560" enable-background="new 0 0 960 560" xml:space="preserve">
 
 <defs>
-    <filter id="blur" x="0" y="0">
-      <feGaussianBlur in="SourceGraphic" dx="20" stdDeviation="15" result="blur" />
-      <!--beefs up the gaussian blur -->
-      <feOffset in="blur" dx="5" result="blurPos"   /> 
-      <feOffset in="SourceGraphic" dx="0" result="offsetBlur" />
+    <filter id="blur" x="-40%" y="-40%" width="180%" height="180%">
+      <feGaussianBlur in="SourceGraphic"  dx="0" stdDeviation="15" result="blur" />
+      <!--beefs up the gaussian blur by copying it -->
+      <feOffset in="blur" dx="0"result="blurXtraHue"   /> 
+      <!-- copies the original graphic so its not lost and we only see the blur-->
+      <feOffset in="SourceGraphic" dx="0" result="originalInput" />
+      <!--beefs up the gaussian blur by copying it -->
+      <feOffset in="blur" width="140%" dx="0" result="blurXtraHue1" />
       <feMerge>
-        <feMergeNode in="blur" />
-        <feMergeNode in="offsetBlur"/>
-        <feMergeNode in="blurPos"/>      
+        <feMergeNode in="blur"/>
+        <feMergeNode in="originalInput"/>
+        <feMergeNode in="blurXtraHue"/>  
+        <feMergeNode in="blurXtraHue1"/>      
       </feMerge>
     </filter>
 
-
-    <filter id="dropShadow">
+    <filter id="dropShadow" x="-40%" y="-40%" width="180%" height="180%">
     <feGaussianBlur in="SourceAlpha" stdDeviation="3" />
     <feOffset dx="2" dy="4" />
     <feMerge>
@@ -25,20 +28,9 @@
         <feMergeNode in="SourceGraphic" />
     </feMerge>
   </filter>
-
-     <filter id="glow">
-    <feGaussianBlur in="FillPaint" stdDeviation="1" />
-   <!-- <feOffset dx="0" dy="0" />
-    <feMerge>
-        <feMergeNode />
-        <feMergeNode in="SourceGraphic" />
-    </feMerge> -->
-  </filter>
-
-
 </defs>
 
-<g id="N2"> <!-- filter="url(#dropShadow)" -->
+<g id="N2" filter="url(#dropShadow)"> <!-- filter="url(#dropShadow)" -->
   <path id="end_14_" fill="#FF173D" d="M672.6,224.8l8.9-6.4l5,6.9c1.4,2,1,4.8-1,6.2l-1.8,1.3c-1.9,1.4-4.7,1-6.1-1L672.6,224.8z"/>
   <path id="end_13_" fill="#FF173D" d="M541.5,217.2h10.9v8.5c0,2.4-2,4.4-4.4,4.4h-2.2c-2.4,0-4.3-1.9-4.3-4.3V217.2z"/>
   <g id="tube_11_" filter="url(#blur)"> <!-- class"css-filter-blur" -->
