--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,9 @@
 
 <defs>
     <filter id="blur" x="-40%" y="-40%" width="180%" height="180%">
-      <feGaussianBlur in="SourceGraphic"  dx="0" stdDeviation="15" result="blur" />
+      <feGaussianBlur in="SourceGraphic"  dx="0" stdDeviation="5" result="blur">
+        <animate attributeName="stdDeviation" dur="0.2s" values="5;4;5" repeatCount="indefinite" />
+      </feGaussianBlur>
       <!--beefs up the gaussian blur by copying it -->
       <feOffset in="blur" dx="0"result="blurXtraHue"   /> 
       <!-- copies the original graphic so its not lost and we only see the blur-->
@@ -13,10 +15,13 @@
       <!--beefs up the gaussian blur by copying it -->
       <feOffset in="blur" width="140%" dx="0" result="blurXtraHue1" />
       <feMerge>
+        
         <feMergeNode in="blur"/>
-        <feMergeNode in="originalInput"/>
+        <!--
         <feMergeNode in="blurXtraHue"/>  
-        <feMergeNode in="blurXtraHue1"/>      
+        <feMergeNode in="blurXtraHue1"/>  
+        -->
+        <feMergeNode in="originalInput"/>    
       </feMerge>
     </filter>
 
