--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,8 +14,7 @@
       <feOffset in="SourceGraphic" dx="0" result="originalInput" />
       <!--beefs up the gaussian blur by copying it -->
       <feOffset in="blur" width="140%" dx="0" result="blurXtraHue1" />
-      <feMerge>
-        
+      <feMerge>        
         <feMergeNode in="blur"/>
         <!--
         <feMergeNode in="blurXtraHue"/>  
@@ -56,6 +55,10 @@
     c2,0,3.6-1.3,4.2-3.1c-0.1,0-0.2,0.1-0.2,0.1c-2.3,3.6-9.3,2.7-9.3-2.7v-6.4c0.6,0.2,1.1,0.3,1.8,0.3h5c3.3,0,6-2.7,6-6v-141
     C689.5,39.2,688.2,37.2,686.4,36.2z"/>
 </g>
+<g >
+<use xlink:href="#N2" x="200" y="0" id="N1" transform="rotate(180) translate(-1600,-260)"/>
+</g>
+
 <g id="O">
   <g id="tube_8_">
     <path id="tube_9_" fill="#01B900" d="M423,31c-55.7,0-101,45.3-101,101s45.3,101,101,101s101-45.3,101-101S478.7,31,423,31z
