--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="site-header">
-<p>new1</p>
+<p>new2</p>
 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
    viewBox="0 0 960 560" enable-background="new 0 0 960 560" xml:space="preserve">
 
@@ -55,8 +55,12 @@
     c2,0,3.6-1.3,4.2-3.1c-0.1,0-0.2,0.1-0.2,0.1c-2.3,3.6-9.3,2.7-9.3-2.7v-6.4c0.6,0.2,1.1,0.3,1.8,0.3h5c3.3,0,6-2.7,6-6v-141
     C689.5,39.2,688.2,37.2,686.4,36.2z"/>
 </g>
-<g >
-<use xlink:href="#N2" x="200" y="0" id="N1" transform="rotate(180) translate(-1600,-260)"/>
+<g id="N1" transform="rotate(180) translate(-1600,-260)">
+  <use xlink:href="#N2" x="200" y="0"  />
+</g>
+
+<g id="N1a" transform="scale(1, -1) translate(0, -260)">
+  <use xlink:href="#N2" x="200" y="0"/>
 </g>
 
 <g id="O">
