all letters rendered
hardcoded making use of <use> and translate()
might need to use neigbour positioning to do it programatically.

--- a/_sass/_neon.scss
+++ b/_sass/_neon.scss
@@ -1,6 +1,6 @@
-.tube {
-	stroke: blue;
-}
+// .tube {
+// 	stroke: blue;
+// }
 
 .css-filter-blur { margin: 10px;
   -webkit-transition: all 5.3s ease-out; 
