--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
 <p>new2</p>
 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-   viewBox="0 0 960 560" enable-background="new 0 0 960 560" xml:space="preserve">
+   viewBox="0 0 1200 560" enable-background="new 0 0 960 560" xml:space="preserve">
 
 <defs>
     <filter id="blur" x="-40%" y="-40%" width="180%" height="180%">
@@ -37,7 +37,7 @@
 <g id="N2" filter="url(#dropShadow)"> <!-- filter="url(#dropShadow)" -->
   <path id="end_14_" fill="#FF173D" d="M672.6,224.8l8.9-6.4l5,6.9c1.4,2,1,4.8-1,6.2l-1.8,1.3c-1.9,1.4-4.7,1-6.1-1L672.6,224.8z"/>
   <path id="end_13_" fill="#FF173D" d="M541.5,217.2h10.9v8.5c0,2.4-2,4.4-4.4,4.4h-2.2c-2.4,0-4.3-1.9-4.3-4.3V217.2z"/>
-  <g id="tube_11_" filter="url(#blur)"> <!-- class"css-filter-blur" -->
+  <g id="tube_11_" > <!-- filter="url(#blur)" -->
     <path fill="#01B900" d="M687.1,228.8c0.3-1.2,0-2.5-0.7-3.5l-4-5.6c-0.1,0.6-0.3,1.2-0.5,1.8L687.1,228.8z"/>
     <path fill="#01B900" d="M673.4,225.9l4.3,5.9c0.8,1,1.9,1.6,3.1,1.8l-5.4-7.5c-0.1,0-0.2,0-0.3,0
       C674.4,226.1,673.9,226,673.4,225.9z"/>
@@ -54,13 +54,6 @@
     c-0.5,0-1,0.1-1.5,0.2V25.4c-0.9,0.8-1.5,2-1.5,3.3v7.5c-1.8,1-3,3-3,5.2v141c0,2.2,1.2,4.2,3,5.2v8.2c0,2.4,1.9,4.3,4.3,4.3h2.2
     c2,0,3.6-1.3,4.2-3.1c-0.1,0-0.2,0.1-0.2,0.1c-2.3,3.6-9.3,2.7-9.3-2.7v-6.4c0.6,0.2,1.1,0.3,1.8,0.3h5c3.3,0,6-2.7,6-6v-141
     C689.5,39.2,688.2,37.2,686.4,36.2z"/>
-</g>
-<g id="N1" transform="rotate(180) translate(-1600,-260)">
-  <use xlink:href="#N2" x="200" y="0"  />
-</g>
-
-<g id="N1a" transform="scale(1, -1) translate(0, -260)">
-  <use xlink:href="#N2" x="200" y="0"/>
 </g>
 
 <g id="O">
@@ -79,7 +72,7 @@
       c-4.7,0-9.3-0.4-13.8-1.1l-5.6,14.2c6.3,1.2,12.7,1.8,19.3,1.8c56.5,0,102.5-46,102.5-102.5C525.5,91.2,501.5,55.9,467,39.4z"/>
   </g>
 </g>
-<g id="G">
+<g id="G" transform="translate(517,0)">
   <g id="tube_21_">
     <path fill="#01B900" d="M340,453c-4.2,0-8.2-0.3-12.3-0.8c0.5,1.2-0.1,2.8-1.7,2.6c-5.3-0.7-10.2-1.1-15-3.5
       c-2.3-1.2-4.6-3.2-7.2-3.8c-2.2-0.5-4.1-0.9-6.1-2c-1.4-0.8-1.1-2.5-0.2-3.3C269.8,427.1,251,397.7,251,364c0-49.1,39.9-89,89-89
@@ -111,7 +104,7 @@
     c0-0.1-0.1-0.2-0.1-0.2c-3.6-2.3-2.7-9.3,2.7-9.3h5.1c-0.2,0.6-0.3,1.1-0.3,1.8v5c0,3.3,2.7,6,6,6h65c2.2,0,4.2-1.2,5.2-3h7.9
     C438.9,370,440.1,369.4,440.9,368.5z"/>
 </g>
-<g id="U">
+<g id="U" transform="translate(-120,0)">
   <path id="end_28_" fill="#FF173D" d="M553.5,278.7h-10.9v-8.5c0-2.4,2-4.4,4.4-4.4h2.2c2.4,0,4.3,1.9,4.3,4.3V278.7z"/>
   <path id="end_27_" fill="#FF173D" d="M689.5,278.7h-10.9v-8.5c0-2.4,2-4.4,4.4-4.4h2.2c2.4,0,4.3,1.9,4.3,4.3V278.7z"/>
   <path id="tube_18_" fill="#01B900" d="M689.5,276.5v-6.5c0-2.4-1.9-4.3-4.3-4.3H683c-2,0-3.6,1.3-4.2,3.1c0.1,0,0.2-0.1,0.2-0.1
@@ -121,12 +114,14 @@
     c18.4,0,33.3-18,33.3-40.2V283.1C692.5,280.5,691.3,278.1,689.5,276.5z"/>
 </g>
 <g id="L">
-  <path id="end_26_" fill="#FF173D" d="M67.5,453.7h10.9v8.5c0,2.4-2,4.4-4.4,4.4h-2.2c-2.4,0-4.3-1.9-4.3-4.3V453.7z"/>
-  <path id="end_25_" fill="#FF173D" d="M78.5,273.7H67.5v-8.5c0-2.4,2-4.4,4.4-4.4h2.2c2.4,0,4.3,1.9,4.3,4.3V273.7z"/>
-  <path id="tube_17_" fill="#01B900" d="M78.5,273.3v-8.2c0-2.4-1.9-4.3-4.3-4.3H72c-2,0-3.6,1.3-4.2,3.1c0.1,0,0.2-0.1,0.2-0.1
-    c2.3-3.6,9.3-2.7,9.3,2.7v6.4c-0.6-0.2-1.1-0.3-1.8-0.3h-5c-3.3,0-6,2.7-6,6v171c0,2.2,1.2,4.2,3,5.2v7.6c0,1.3,0.6,2.4,1.5,3.2
-    v-10.3c0.5,0.1,1,0.2,1.5,0.2h5c0.5,0,1-0.1,1.5-0.2v10.2c0.9-0.8,1.5-2,1.5-3.3v-7.5c1.8-1,3-3,3-5.2v-171
-    C81.5,276.3,80.3,274.3,78.5,273.3z"/>
+  <g id="LV">
+    <path id="end_26_" fill="#FF173D" d="M67.5,453.7h10.9v8.5c0,2.4-2,4.4-4.4,4.4h-2.2c-2.4,0-4.3-1.9-4.3-4.3V453.7z"/>
+    <path id="end_25_" fill="#FF173D" d="M78.5,273.7H67.5v-8.5c0-2.4,2-4.4,4.4-4.4h2.2c2.4,0,4.3,1.9,4.3,4.3V273.7z"/>
+    <path id="tube_17_" fill="#01B900" d="M78.5,273.3v-8.2c0-2.4-1.9-4.3-4.3-4.3H72c-2,0-3.6,1.3-4.2,3.1c0.1,0,0.2-0.1,0.2-0.1
+      c2.3-3.6,9.3-2.7,9.3,2.7v6.4c-0.6-0.2-1.1-0.3-1.8-0.3h-5c-3.3,0-6,2.7-6,6v171c0,2.2,1.2,4.2,3,5.2v7.6c0,1.3,0.6,2.4,1.5,3.2
+      v-10.3c0.5,0.1,1,0.2,1.5,0.2h5c0.5,0,1-0.1,1.5-0.2v10.2c0.9-0.8,1.5-2,1.5-3.3v-7.5c1.8-1,3-3,3-5.2v-171
+      C81.5,276.3,80.3,274.3,78.5,273.3z"/>
+  </g>
   <path id="end_24_" fill="#FF173D" d="M175,463V452h8.5c2.4,0,4.4,2,4.4,4.4v2.2c0,2.4-1.9,4.3-4.3,4.3H175z"/>
   <path id="end_23_" fill="#FF173D" d="M101,452V463h-8.5c-2.4,0-4.4-2-4.4-4.4v-2.2c0-2.4,1.9-4.3,4.3-4.3H101z"/>
   <path id="tube_16_" fill="#01B900" d="M186.9,461.5h-11.1c0.1-0.5,0.2-1,0.2-1.5v-5c0-0.5-0.1-1-0.2-1.5h11c-0.8-0.9-2-1.5-3.3-1.5
@@ -134,7 +129,7 @@
     c-3.6-2.3-2.7-9.3,2.7-9.3h6.6c-0.2,0.6-0.3,1.1-0.3,1.8v5c0,3.3,2.7,6,6,6h64c2.2,0,4.2-1.2,5.2-3h8.4
     C184.9,463,186.1,462.4,186.9,461.5z"/>
 </g>
-<g id="E2">
+<!-- <g id="E2">
   <path id="end_22_" fill="#FF173D" d="M768.5,456.7h10.9v8.5c0,2.4-2,4.4-4.4,4.4h-2.2c-2.4,0-4.3-1.9-4.3-4.3V456.7z"/>
   <path id="end_21_" fill="#FF173D" d="M779.5,276.7h-10.9v-8.5c0-2.4,2-4.4,4.4-4.4h2.2c2.4,0,4.3,1.9,4.3,4.3V276.7z"/>
   <path id="tube_15_" fill="#01B900" d="M779.5,276.3v-8.2c0-2.4-1.9-4.3-4.3-4.3H773c-2,0-3.6,1.3-4.2,3.1c0.1,0,0.2-0.1,0.2-0.1
@@ -160,7 +155,9 @@
     c-3.6-2.3-2.7-9.3,2.7-9.3h6.6c-0.2,0.6-0.3,1.1-0.3,1.8v5c0,3.3,2.7,6,6,6h64c2.2,0,4.2-1.2,5.2-3h8.4
     C883.9,275,885.1,274.4,885.9,273.5z"/>
 </g>
-<g id="E">
+ -->
+
+ <g id="E">
   <path id="end_9_" fill="#FF173D" d="M319,44V33h8.5c2.4,0,4.4,2,4.4,4.4v2.2c0,2.4-1.9,4.3-4.3,4.3H319z"/>
   <path id="end_8_" fill="#FF173D" d="M234,33V44h-8.5c-2.4,0-4.4-2-4.4-4.4v-2.2c0-2.4,1.9-4.3,4.3-4.3H234z"/>
   <path id="tube_4_" fill="#01B900" d="M319.6,42.5C319.6,42.5,319.6,42.5,319.6,42.5c0.1-0.5,0.2-1,0.2-1.5v-5c0-0.5-0.1-1-0.2-1.5
@@ -200,6 +197,31 @@
     v-10.3c0.5,0.1,1,0.2,1.5,0.2h5c0.5,0,1-0.1,1.5-0.2v10.2c0.9-0.8,1.5-2,1.5-3.3v-7.5c1.8-1,3-3,3-5.2v-141
     C81.5,77.3,80.3,75.3,78.5,74.3z"/>
 </g>
+
+
+<g id="O2">
+  <use xlink:href="#O" x="-120" y="232"/>
+</g>
+
+<g id="N3">
+  <use xlink:href="#N2" x="50" y="232"/>
+</g>
+
+<g id="E2">
+  <use xlink:href="#E" x="780" y="232"/>
+  <use xlink:href="#LV" x="910" y="0"/>
+</g>
+
+
+<!-- <g id="N1" transform="rotate(180) translate(-1600,-260)">
+  <use xlink:href="#N2" x="200" y="0"  />
+</g> -->
+
+<!-- <g id="N1a" transform="scale(1, -1) translate(0, -260)">
+  <use xlink:href="#N2" x="200" y="0"  />
+</g> -->
+
+
 </svg>
 
 
