--- a/_includes/header.html
+++ b/_includes/header.html
@@ -72,7 +72,7 @@
       c-4.7,0-9.3-0.4-13.8-1.1l-5.6,14.2c6.3,1.2,12.7,1.8,19.3,1.8c56.5,0,102.5-46,102.5-102.5C525.5,91.2,501.5,55.9,467,39.4z"/>
   </g>
 </g>
-<g id="G" transform="translate(517,0)">
+<g id="G" transform="translate(507,0)">
   <g id="tube_21_">
     <path fill="#01B900" d="M340,453c-4.2,0-8.2-0.3-12.3-0.8c0.5,1.2-0.1,2.8-1.7,2.6c-5.3-0.7-10.2-1.1-15-3.5
       c-2.3-1.2-4.6-3.2-7.2-3.8c-2.2-0.5-4.1-0.9-6.1-2c-1.4-0.8-1.1-2.5-0.2-3.3C269.8,427.1,251,397.7,251,364c0-49.1,39.9-89,89-89
@@ -104,7 +104,7 @@
     c0-0.1-0.1-0.2-0.1-0.2c-3.6-2.3-2.7-9.3,2.7-9.3h5.1c-0.2,0.6-0.3,1.1-0.3,1.8v5c0,3.3,2.7,6,6,6h65c2.2,0,4.2-1.2,5.2-3h7.9
     C438.9,370,440.1,369.4,440.9,368.5z"/>
 </g>
-<g id="U" transform="translate(-120,0)">
+<g id="U" transform="translate(-137,0)">  <!-- -137 to align with the above N -->
   <path id="end_28_" fill="#FF173D" d="M553.5,278.7h-10.9v-8.5c0-2.4,2-4.4,4.4-4.4h2.2c2.4,0,4.3,1.9,4.3,4.3V278.7z"/>
   <path id="end_27_" fill="#FF173D" d="M689.5,278.7h-10.9v-8.5c0-2.4,2-4.4,4.4-4.4h2.2c2.4,0,4.3,1.9,4.3,4.3V278.7z"/>
   <path id="tube_18_" fill="#01B900" d="M689.5,276.5v-6.5c0-2.4-1.9-4.3-4.3-4.3H683c-2,0-3.6,1.3-4.2,3.1c0.1,0,0.2-0.1,0.2-0.1
@@ -129,33 +129,6 @@
     c-3.6-2.3-2.7-9.3,2.7-9.3h6.6c-0.2,0.6-0.3,1.1-0.3,1.8v5c0,3.3,2.7,6,6,6h64c2.2,0,4.2-1.2,5.2-3h8.4
     C184.9,463,186.1,462.4,186.9,461.5z"/>
 </g>
-<!-- <g id="E2">
-  <path id="end_22_" fill="#FF173D" d="M768.5,456.7h10.9v8.5c0,2.4-2,4.4-4.4,4.4h-2.2c-2.4,0-4.3-1.9-4.3-4.3V456.7z"/>
-  <path id="end_21_" fill="#FF173D" d="M779.5,276.7h-10.9v-8.5c0-2.4,2-4.4,4.4-4.4h2.2c2.4,0,4.3,1.9,4.3,4.3V276.7z"/>
-  <path id="tube_15_" fill="#01B900" d="M779.5,276.3v-8.2c0-2.4-1.9-4.3-4.3-4.3H773c-2,0-3.6,1.3-4.2,3.1c0.1,0,0.2-0.1,0.2-0.1
-    c2.3-3.6,9.3-2.7,9.3,2.7v6.4c-0.6-0.2-1.1-0.3-1.8-0.3h-5c-3.3,0-6,2.7-6,6v171c0,2.2,1.2,4.2,3,5.2v7.6c0,1.3,0.6,2.4,1.5,3.2
-    v-10.3c0.5,0.1,1,0.2,1.5,0.2h5c0.5,0,1-0.1,1.5-0.2v10.2c0.9-0.8,1.5-2,1.5-3.3v-7.5c1.8-1,3-3,3-5.2v-171
-    C782.5,279.3,781.3,277.3,779.5,276.3z"/>
-  <path id="end_20_" fill="#FF173D" d="M876,466V455h8.5c2.4,0,4.4,2,4.4,4.4v2.2c0,2.4-1.9,4.3-4.3,4.3H876z"/>
-  <path id="end_19_" fill="#FF173D" d="M803,455V466h-8.5c-2.4,0-4.4-2-4.4-4.4v-2.2c0-2.4,1.9-4.3,4.3-4.3H803z"/>
-  <path id="tube_14_" fill="#01B900" d="M887.9,464.5h-11.1c0.1-0.5,0.2-1,0.2-1.5v-5c0-0.5-0.1-1-0.2-1.5h11c-0.8-0.9-2-1.5-3.3-1.5
-    h-8.3c-1-1.8-3-3-5.2-3h-64c-2.2,0-4.2,1.2-5.2,3h-7.4c-2.4,0-4.3,1.9-4.3,4.3v2.2c0,2,1.3,3.6,3.1,4.2c0-0.1-0.1-0.2-0.1-0.2
-    c-3.6-2.3-2.7-9.3,2.7-9.3h5.6c-0.2,0.6-0.3,1.1-0.3,1.8v5c0,3.3,2.7,6,6,6h64c2.2,0,4.2-1.2,5.2-3h8.4
-    C885.9,466,887.1,465.4,887.9,464.5z"/>
-  <path id="end_18_" fill="#FF173D" d="M864,368V357h8.5c2.4,0,4.4,2,4.4,4.4v2.2c0,2.4-1.9,4.3-4.3,4.3H864z"/>
-  <path id="end_17_" fill="#FF173D" d="M801,357V368h-8.5c-2.4,0-4.4-2-4.4-4.4v-2.2c0-2.4,1.9-4.3,4.3-4.3H801z"/>
-  <path id="tube_13_" fill="#01B900" d="M875.9,366.5h-9.8c0.1-0.5,0.2-1,0.2-1.5v-5c0-0.5-0.1-1-0.2-1.5h9.7c-0.8-0.9-2-1.5-3.3-1.5
-    h-7c-1-1.8-3-3-5.2-3h-54c-2.3,0-4.3,1.3-5.3,3.3V357h-8.6c-2.4,0-4.3,1.9-4.3,4.3v2.2c0,2,1.3,3.6,3.1,4.2c0-0.1-0.1-0.2-0.1-0.2
-    c-3.6-2.3-2.7-9.3,2.7-9.3h6.9c-0.2,0.6-0.3,1.1-0.3,1.8v5c0,3.3,2.7,6,6,6h54c2.2,0,4.2-1.2,5.2-3h7.1
-    C873.9,368,875.1,367.4,875.9,366.5z"/>
-  <path id="end_16_" fill="#FF173D" d="M874,275V264h8.5c2.4,0,4.4,2,4.4,4.4v2.2c0,2.4-1.9,4.3-4.3,4.3H874z"/>
-  <path id="end_15_" fill="#FF173D" d="M801,264V275h-8.5c-2.4,0-4.4-2-4.4-4.4v-2.2c0-2.4,1.9-4.3,4.3-4.3H801z"/>
-  <path id="tube_12_" fill="#01B900" d="M885.9,273.5h-11.1c0.1-0.5,0.2-1,0.2-1.5v-5c0-0.5-0.1-1-0.2-1.5h11c-0.8-0.9-2-1.5-3.3-1.5
-    h-8.3c-1-1.8-3-3-5.2-3h-64c-2.2,0-4.2,1.2-5.2,3h-8.4c-2.4,0-4.3,1.9-4.3,4.3v2.2c0,2,1.3,3.6,3.1,4.2c0-0.1-0.1-0.2-0.1-0.2
-    c-3.6-2.3-2.7-9.3,2.7-9.3h6.6c-0.2,0.6-0.3,1.1-0.3,1.8v5c0,3.3,2.7,6,6,6h64c2.2,0,4.2-1.2,5.2-3h8.4
-    C883.9,275,885.1,274.4,885.9,273.5z"/>
-</g>
- -->
 
  <g id="E">
   <path id="end_9_" fill="#FF173D" d="M319,44V33h8.5c2.4,0,4.4,2,4.4,4.4v2.2c0,2.4-1.9,4.3-4.3,4.3H319z"/>
@@ -200,16 +173,16 @@
 
 
 <g id="O2">
-  <use xlink:href="#O" x="-120" y="232"/>
+  <use xlink:href="#O" x="-140" y="232"/>
 </g>
 
 <g id="N3">
-  <use xlink:href="#N2" x="50" y="232"/>
+  <use xlink:href="#N2" x="35" y="232"/>
 </g>
 
 <g id="E2">
-  <use xlink:href="#E" x="780" y="232"/>
-  <use xlink:href="#LV" x="910" y="0"/>
+  <use xlink:href="#E" x="775" y="232"/>
+  <use xlink:href="#LV" x="905" y="0"/>
 </g>
 
 
@@ -223,7 +196,6 @@
 
 
 </svg>
-
 
 
 
