playing around with colour generation

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="site-header">
-<p>new2</p>
+<div id="palettes"><p>new6</p></div>
 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
    viewBox="0 0 1200 560" enable-background="new 0 0 960 560" xml:space="preserve">
 
