--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,4 +21,5 @@
  <script type="text/javascript" src="{{ "/js/menu.js" | prepend: site.baseurl }}"></script> 
  <script type="text/javascript" src="{{ "/js/traceur-runtime.js" | prepend: site.baseurl }}"></script>
  <script type="text/javascript" src="{{ "/js/neon.js" | prepend: site.baseurl }}"></script> 
+ <script type="text/javascript" src="{{ "/js/colour-palette.js" | prepend: site.baseurl }}"></script> 
 </html>
