--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="site-header">
-<div id="palettes"><p>new6</p></div>
+<div id="palettes"><p>new5</p></div>
 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
    viewBox="0 0 1200 560" enable-background="new 0 0 960 560" xml:space="preserve">
 
@@ -32,18 +32,30 @@
         <feMergeNode in="SourceGraphic" />
     </feMerge>
   </filter>
+
+ <linearGradient id="upper" gradientUnits="userSpaceOnUse" x1="0%" y1="0%" x2="0%" y2="100%">
+      <stop stop-color="rgb(107,186,112)" offset="0">
+        <animate attributeType="CSS" attributeName="stop-color" id="animate0"
+           dur="2s" begin="indefinite" fill="freeze"/>
+      </stop>
+      <stop stop-color="rgb(107,186,112)" offset="1">
+        <animate attributeType="CSS" attributeName="stop-color"
+           dur="2s" begin="animate0.begin" fill="freeze"/>
+      </stop>
+    </linearGradient>
+
 </defs>
 
 <g id="N2" filter="url(#dropShadow)"> <!-- filter="url(#dropShadow)" -->
   <path id="end_14_" fill="#FF173D" d="M672.6,224.8l8.9-6.4l5,6.9c1.4,2,1,4.8-1,6.2l-1.8,1.3c-1.9,1.4-4.7,1-6.1-1L672.6,224.8z"/>
   <path id="end_13_" fill="#FF173D" d="M541.5,217.2h10.9v8.5c0,2.4-2,4.4-4.4,4.4h-2.2c-2.4,0-4.3-1.9-4.3-4.3V217.2z"/>
-  <g id="tube_11_" > <!-- filter="url(#blur)" -->
+  <g> <!-- filter="url(#blur)" -->
     <path fill="#01B900" d="M687.1,228.8c0.3-1.2,0-2.5-0.7-3.5l-4-5.6c-0.1,0.6-0.3,1.2-0.5,1.8L687.1,228.8z"/>
     <path fill="#01B900" d="M673.4,225.9l4.3,5.9c0.8,1,1.9,1.6,3.1,1.8l-5.4-7.5c-0.1,0-0.2,0-0.3,0
       C674.4,226.1,673.9,226,673.4,225.9z"/>
     <path fill="#01B900" d="M542.7,224.5v-7.3h-1.2v8.6c0,2.4,1.9,4.3,4.3,4.3h2.2c2,0,3.6-1.3,4.2-3.1c-0.1,0-0.2,0.1-0.2,0.1
       C549.7,230.8,542.7,229.9,542.7,224.5z"/>
-    <path fill="#1EC11A" d="M681.9,221.5c0.2-0.6,0.4-1.2,0.5-1.8c0.3-1.8-0.1-3.6-1.1-5.2L574,50.2c-9.4-14.4-17.6-15.6-22.7-14.1
+    <path id="tube_11_" id fill="#1EC11A" d="M681.9,221.5c0.2-0.6,0.4-1.2,0.5-1.8c0.3-1.8-0.1-3.6-1.1-5.2L574,50.2c-9.4-14.4-17.6-15.6-22.7-14.1
       c-9.3,2.8-11.3,14.7-11.3,24.2v151.1c0,4.1,3.4,7.5,7.5,7.5s7.5-3.4,7.5-7.5V60.3c0-4.3,0.5-7.1,0.9-8.7c1.3,1.1,3.2,3.2,5.5,6.8
       l107.3,164.3c1.1,1.7,2.8,2.8,4.7,3.2c0.5,0.1,1.1,0.2,1.6,0.2c0.1,0,0.2,0,0.3,0c1.3-0.1,2.6-0.4,3.8-1.2
       C680.4,224,681.3,222.8,681.9,221.5z"/>
