--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,13 +34,13 @@
   </filter>
 
  <linearGradient id="upper" gradientUnits="userSpaceOnUse" x1="0%" y1="0%" x2="0%" y2="100%">
-      <stop stop-color="rgb(107,186,112)" offset="0">
+      <stop stop-color="rgb(0,0,0)" offset="0">
         <animate attributeType="CSS" attributeName="stop-color" id="animate0"
-           dur="2s" begin="indefinite" fill="freeze"/>
+           dur="2s" begin="indefinite" fill="freeze" to="rgb(255,255,255)"/>
       </stop>
-      <stop stop-color="rgb(107,186,112)" offset="1">
-        <animate attributeType="CSS" attributeName="stop-color"
-           dur="2s" begin="animate0.begin" fill="freeze"/>
+      <stop stop-color="rgb(0,0,0)" offset="1">
+        <animate attributeType="CSS" attributeName="stop-color" id="animate1"
+           dur="2s" begin="animate0.begin" fill="freeze" to="rgb(255,255,255)"/>
       </stop>
     </linearGradient>
 
@@ -55,7 +55,7 @@
       C674.4,226.1,673.9,226,673.4,225.9z"/>
     <path fill="#01B900" d="M542.7,224.5v-7.3h-1.2v8.6c0,2.4,1.9,4.3,4.3,4.3h2.2c2,0,3.6-1.3,4.2-3.1c-0.1,0-0.2,0.1-0.2,0.1
       C549.7,230.8,542.7,229.9,542.7,224.5z"/>
-    <path id="tube_11_" id fill="#1EC11A" d="M681.9,221.5c0.2-0.6,0.4-1.2,0.5-1.8c0.3-1.8-0.1-3.6-1.1-5.2L574,50.2c-9.4-14.4-17.6-15.6-22.7-14.1
+    <path id="tube_11_" id fill="rgb(1,185,0)" d="M681.9,221.5c0.2-0.6,0.4-1.2,0.5-1.8c0.3-1.8-0.1-3.6-1.1-5.2L574,50.2c-9.4-14.4-17.6-15.6-22.7-14.1
       c-9.3,2.8-11.3,14.7-11.3,24.2v151.1c0,4.1,3.4,7.5,7.5,7.5s7.5-3.4,7.5-7.5V60.3c0-4.3,0.5-7.1,0.9-8.7c1.3,1.1,3.2,3.2,5.5,6.8
       l107.3,164.3c1.1,1.7,2.8,2.8,4.7,3.2c0.5,0.1,1.1,0.2,1.6,0.2c0.1,0,0.2,0,0.3,0c1.3-0.1,2.6-0.4,3.8-1.2
       C680.4,224,681.3,222.8,681.9,221.5z"/>
@@ -111,7 +111,7 @@
   </g>
   <path id="end_30_" fill="#FF173D" d="M429,370V359h8.5c2.4,0,4.4,2,4.4,4.4v2.2c0,2.4-1.9,4.3-4.3,4.3H429z"/>
   <path id="end_29_" fill="#FF173D" d="M356,359V370h-8.5c-2.4,0-4.4-2-4.4-4.4v-2.2c0-2.4,1.9-4.3,4.3-4.3H356z"/>
-  <path id="tube_19_" fill="#01B900" d="M440.9,368.5h-10.6c0.1-0.5,0.2-1,0.2-1.5v-5c0-0.5-0.1-1-0.2-1.5h10.5
+  <path id="tube_19_" fill="rgb(1,185,0)" d="M440.9,368.5h-10.6c0.1-0.5,0.2-1,0.2-1.5v-5c0-0.5-0.1-1-0.2-1.5h10.5
     c-0.8-0.9-2-1.5-3.3-1.5h-7.8c-1-1.8-3-3-5.2-3h-65c-2.2,0-4.2,1.2-5.2,3h-6.9c-2.4,0-4.3,1.9-4.3,4.3v2.2c0,2,1.3,3.6,3.1,4.2
     c0-0.1-0.1-0.2-0.1-0.2c-3.6-2.3-2.7-9.3,2.7-9.3h5.1c-0.2,0.6-0.3,1.1-0.3,1.8v5c0,3.3,2.7,6,6,6h65c2.2,0,4.2-1.2,5.2-3h7.9
     C438.9,370,440.1,369.4,440.9,368.5z"/>
