--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,7 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <!-- JS VENDOR-->
     <script type="text/javascript" src="{{ "/js/jquery-1.11.2.js" | prepend: site.baseurl }}"></script>
+    <script type="text/javascript" src="{{ "/js/velocity.min.js" | prepend: site.baseurl }}"></script>
     <script type="text/javascript" src="{{ "/js/modernizr-latest.js" | prepend: site.baseurl }}"></script>
 
     <!-- JS -->
