--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
   <!-- JS -->
  <script type="text/javascript" src="{{ "/js/menu.js" | prepend: site.baseurl }}"></script> 
  <script type="text/javascript" src="{{ "/js/traceur-runtime.js" | prepend: site.baseurl }}"></script>
- <script type="text/javascript" src="{{ "/js/neon.js" | prepend: site.baseurl }}"></script> 
+ <!-- <script type="text/javascript" src="{{ "/js/neon.js" | prepend: site.baseurl }}"></script>  -->
+ <script type="text/javascript" src="{{ "/js/main.js" | prepend: site.baseurl }}"></script> 
  <script type="text/javascript" src="{{ "/js/colour-palette.js" | prepend: site.baseurl }}"></script> 
 </html>
