--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
 <defs>
   <filter id="blur" x="-40%" y="-40%" width="180%" height="180%">
     <feGaussianBlur in="SourceGraphic"  dx="0" stdDeviation="5" result="blur">
-      <animate attributeName="stdDeviation" dur="0.2s" values="5;4;5" repeatCount="indefinite" />
+      <animate attributeName="stdDeviation" dur="0.2s" values="6;4;5" repeatCount="indefinite" />
     </feGaussianBlur>
     <!--beefs up the gaussian blur by copying it -->
     <feOffset in="blur" dx="0" result="blurXtraHue"   /> 
@@ -15,10 +15,10 @@
     <feOffset in="blur" width="140%" dx="0" result="blurXtraHue1" />
     <feMerge>        
       <feMergeNode in="blur"/>
-      <!--
+      
       <feMergeNode in="blurXtraHue"/>  
       <feMergeNode in="blurXtraHue1"/>  
-      -->
+      <!---->
       <feMergeNode in="originalInput"/>    
     </feMerge>
   </filter>
@@ -47,14 +47,18 @@
    </linearGradient>
 
 
-   <linearGradient id="flickerEffect" gradientUnits="userSpaceOnUse" x1="0%" y1="0%" x2="0%" y2="100%">
-        <stop stop-color="rgb(20,10,90)" offset="0">
-          <animate attributeType="CSS" attributeName="stop-color" id="flicker"
-             dur="2s" begin="indefinite" fill="freeze" to="rgb(255,255,255)"/>
-        </stop>
-        <stop stop-color="rgb(200,30,80)" offset="1">
+   <linearGradient id="flicker" gradientUnits="userSpaceOnUse" x1="0%" y1="0%" x2="0%" y2="100%">
+        <stop stop-color="rgb(0,0,0)" offset="0">
           <animate attributeType="CSS" attributeName="stop-color" id="flicker1"
-             dur="2s" begin="flicker.begin" fill="freeze" to="rgb(255,255,255)"/>
+             dur="0.01s" begin="0s" fill="freeze" to="rgb(100,100,100)"/>
+        </stop>
+        <stop stop-color="rgb(0,0,0)" offset="1">
+          <animate attributeType="CSS" attributeName="stop-color" id="flicker2"
+             dur="0.01s" begin="flicker1.end" fill="freeze" to="rgb(255,255,255)"/>
+        </stop>
+       <stop stop-color="rgb(0,0,0)" offset="40">
+          <animate attributeType="CSS" attributeName="stop-color" id="flicker3"
+             dur="2s" begin="flicker2.end" fill="freeze" to="rgb(0,0,0)"/>
         </stop>
    </linearGradient>   
 
@@ -68,12 +72,12 @@
     <line fill="none" stroke-width="11" stroke-linecap="round" stroke-miterlimit="28" x1="825.386" y1="361.083" x2="911.386" y2="361.083"/>
   </g>
   <g id="G-def">
-    <path  d="M822.886,261.5c-56.519,0-102.5,45.981-102.5,102.5c0,39.691,22.677,74.183,55.755,91.205l5.501-14.055
+    <path stroke='none' d="M822.886,261.5c-56.519,0-102.5,45.981-102.5,102.5c0,39.691,22.677,74.183,55.755,91.205l5.501-14.055
       c-27.507-14.764-46.256-43.807-46.256-77.151c0-48.248,39.252-87.5,87.5-87.5c7.591,0,14.958,0.973,21.986,2.799l6.047-13.902
       C842.006,262.859,832.602,261.5,822.886,261.5z"/>
-    <path  d="M907.71,385.5c-9.607,37.886-43.993,66-84.824,66c-4.684,0-9.282-0.374-13.768-1.087l-5.577,14.248
+    <path stroke='none' d="M907.71,385.5c-9.607,37.886-43.993,66-84.824,66c-4.684,0-9.282-0.374-13.768-1.087l-5.577,14.248
     c6.267,1.202,12.733,1.839,19.345,1.839c49.146,0,90.317-34.77,100.224-81H907.71z"/>
-    <path d="M911.189,312.035c-11.803-20.535-23.277-30.575-44.35-40.62l-5.985,13.76
+    <path stroke='none' d="M911.189,312.035c-11.803-20.535-23.277-30.575-44.35-40.62l-5.985,13.76
     c15.562,7.527,28.573,19.529,37.348,34.325L911.189,312.035z"/>
     <line fill="none" stroke-width="17" stroke-linecap="round" stroke-miterlimit="28" x1="839.386" y1="360.917" x2="898.386" y2="360.917"/>
   </g>
@@ -84,7 +88,7 @@
       V274.667z"/>
   </g>
   <g id="U-def">
-    <path d="M533.357,274.526v-0.011c-0.1-0.093-0.194-0.192-0.285-0.293c-0.063-0.04-0.131-0.075-0.194-0.116
+    <path stroke='none' d="M533.357,274.526v-0.011c-0.1-0.093-0.194-0.192-0.285-0.293c-0.063-0.04-0.131-0.075-0.194-0.116
       c-0.267-0.13-0.516-0.28-0.742-0.454v0.01c-1.252-0.735-2.701-1.163-4.25-1.163c-4.687,0-8.5,3.854-8.5,8.593V425.8
       c0,12.475-7.472,23.014-16.315,23.014h-86.369c-8.844,0-16.315-10.539-16.315-23.014V281.093c0-2.588-1.144-4.905-2.94-6.481
       c-0.189-0.124-0.367-0.259-0.53-0.407c-0.289-0.16-0.562-0.338-0.799-0.551c-1.248-0.728-2.69-1.153-4.231-1.153
@@ -113,10 +117,10 @@
     <circle fill="none" stroke-width="8" stroke-miterlimit="10" cx="402.886" cy="132" r="95"/>
   </g>
   <g id="O-def">
-    <path id="tube_8_" d="M361.642,209.151c-27.507-14.764-46.256-43.807-46.256-77.151
+    <path stroke='none' id="tube_8_" d="M361.642,209.151c-27.507-14.764-46.256-43.807-46.256-77.151
       c0-48.248,39.252-87.5,87.5-87.5c7.591,0,14.958,0.973,21.986,2.799l6.047-13.902c-8.913-2.537-18.317-3.896-28.033-3.896
       c-56.519,0-102.5,45.981-102.5,102.5c0,39.691,22.677,74.183,55.755,91.205L361.642,209.151z"/>
-    <path id="tube_7_" d="M446.84,39.415l-5.985,13.76c29.284,14.163,49.531,44.174,49.531,78.825
+    <path stroke='none' id="tube_7_" d="M446.84,39.415l-5.985,13.76c29.284,14.163,49.531,44.174,49.531,78.825
       c0,48.248-39.252,87.5-87.5,87.5c-4.684,0-9.282-0.374-13.768-1.087l-5.577,14.248c6.267,1.202,12.733,1.839,19.345,1.839
       c56.519,0,102.5-45.981,102.5-102.5C505.386,91.203,481.425,55.9,446.84,39.415z"/>
   </g>
@@ -144,7 +148,17 @@
 <!-- STUFF DRAWN ON THE SCREEN -->
 <!-- G -->
 <g id="subG" stroke="orange" fill="orange"><use xlink:href="#subG-def"/></g>
-<g id="G" stroke="url(#upper)" fill="url(#upper)"><use xlink:href="#G-def"/></g>
+<g id="G" stroke="rgb(200,30,80)" filter="url(#blur)" fill="rgb(200,30,80)">
+<use xlink:href="#G-def">
+<animate id="first" attributeName="fill" from="black" to="white" begin="0s" dur="0.1s"/>
+<animate id="second" attributeName="fill" from="white" to="rgb(200,30,80)" begin="first.end" dur="0.1s"/>
+<animate id="third" attributeName="fill" from="black" to="white" begin="second.end" dur="0.1s"/>
+<animate attributeName="fill" from="black" to="rgb(200,30,80)" begin="third.end" dur="0.1s" fill="freeze"/>
+</use>
+<!-- <animate attributeName="fill" from="yellow" to="#00FFFF" begin ="prev.end" dur="1s"/>
+<animate attributeName="fill" from="#00FFFF" to="blue" begin="prev.end" dur="1s" />
+<animate attributeName="fill" from="blue" to="indigo" begin="prev.end" dur="1s" fill="freeze" /> -->
+</g>
 <!-- U -->
 <g id="subU" fill="orange"><use xlink:href="#subU-def"/></g>
 <g id="U" fill="rgb(200,30,80)"><use xlink:href="#U-def"/></g>
