--- a/_sass/_neon.scss
+++ b/_sass/_neon.scss
@@ -10,3 +10,26 @@
           transition: all 0.3s ease-out;
 }
 
+.bulb {
+  -webkit-animation-name: glow-blue;
+  -webkit-animation-duration: 0.1s;
+  -webkit-animation-iteration-count: 5;
+  -webkit-animation-timing-function: ease-in-out;
+  -webkit-animation-direction: alternate;
+  -webkit-animation-delay: 5s;
+  
+  animation-name: glow-blue;
+  animation-duration: 0.1s;
+  animation-iteration-count: 5;
+  animation-timing-function: ease-in-out;
+  animation-direction: alternate;
+  animation-delay: 5s;
+}
+
+@-webkit-keyframes glow-blue {
+  100% { fill: hsl(255, 255, 255); }
+}
+
+@keyframes glow-blue {
+  100% { fill: hsl(255, 255, 255); }
+}
